# youtube_stats

./: Cargo.toml  LICENSE  README.md  maturin.toml  pyproject.toml
.github/workflows/: build.yml
src/: account.rs  auth.rs  lib.rs
test/: test_youtube_stats.py
