[package]
name = "youtube_stats"
version = "0.1.3"
edition = "2021"

[lib]
name = "youtube_stats"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
